# EasyMD

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml
apps/desktop/: .gitignore  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.vue
apps/web/src/assets/example/: markdown.md
apps/web/src/components/editor/: EditorContextMenu.vue  EditorPanel.vue  EditorToolbar.vue  Footer.vue
apps/web/src/composables/: slashCommands.ts  useCommandPalette.ts  useCursorSync.ts  useDesktopFileOpen.ts  useDocumentSave.ts  useEditorToolbarActions.ts  useLocalizedUploadHosts.ts  useOpenLocalDocuments.ts
apps/web/src/configs/: keyboard-shortcuts.ts
apps/web/src/lib/documents/: document-list.test.ts  document-list.ts  file-path-map.ts  last-open-directory.ts  local-image-insert.test.ts  local-image-insert.ts  pick-local-images.ts  save-deps.ts
apps/web/src/lib/editor/: toolbar-snippets.test.ts  toolbar-snippets.ts
apps/web/src/lib/preview/: local-image-src.ts
apps/web/src/lib/upload/: validate-image.test.ts  validate-image.ts
apps/web/src/services/export/: index.ts  word.ts
apps/web/src/services/sync/: hydrate.ts  (+1 more)
apps/web/src/storage/: db.ts
apps/web/src/stores/: export.ts  folderSource.ts  post.ts  render.ts  ui.ts
apps/web/src/types/: global.d.ts  post.ts
docs/: README.md
scripts/: desktop-dev-prepare.mjs
(+25 files in other folders)
