[package]
name = "easymd"
version = "2.1.0"
description = "EasyMD Markdown Editor"
authors = [ "EasyMD" ]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri = { version = "2", features = [ "protocol-asset" ] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
